fixed carousel about overlap on landscape

--- a/src/features/displayCard/layoutStyles/carousel/styles/_carousel.scss
+++ b/src/features/displayCard/layoutStyles/carousel/styles/_carousel.scss
@@ -10,7 +10,7 @@ body {
   // max-width: 100%
   // margin-bottom: 600px;
   position: relative;
-  height: 70vh;
+  height: 450px;
   padding-top: 0%;
   // max-width: 1100px;
   // margin: 0 auto 600px;
