--- a/src/features/displayCard/layoutStyles/carousel/styles/carousel.css
+++ b/src/features/displayCard/layoutStyles/carousel/styles/carousel.css
@@ -6,7 +6,7 @@ body {
   padding: 5px 10px;
   text-align: center;
   position: relative;
-  height: 70vh;
+  height: 450px;
   padding-top: 0%;
 }
 .carousel header {
